# scoregate

./: Cargo.toml  readme.md
scripts/: debug_init_scoring_client.sh  init_scoring_client.sh  test_loan_request.sh  test_subscribe.sh
src/: main.rs  models.rs  scoring.rs
src/routes/: loan_request.rs  mod.rs  subscribe.rs
