[package]
name = "scoregate"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
uuid = { version = "1.2", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
blake3 = "1.5"
dotenv = "0.15"